# semerg

./: .gitignore  ChangeLog.md  LICENSE  README.md  pyproject.toml
front/: package-lock.json  package.json
front/src/: energy.js  index.html
src/semerg/: __init__.py  main.py
